# cafedatacollection

./: .env.template  .gitignore  LICENSE  README.md  articlemodel.json  city_mappings.json  contentful-export-e0i4x96z7ei2-master-2025-04-29T13-59-09.json  contentful-import-error-log-e0i4x96z7ei2-2025-09-04T11-30-06.json  input.csv  main copy.py  main.py  pyproject.toml  requirements.txt  run_cafe_pipeline.py  setup.py  test_input.csv  test_mapping.json
articles/: article.py  config.py  llm_client.py  schema.py
articles/input/: input.json
articles/outputs/: article_the_evolution_of_coffee_brewing_methods.json
articles/utils/: logging.py
cafe_data_collection/: __init__.py  config.py  contentful_export.py  data_collection.py  excel_export.py  geocoding.py  llm_client.py  main.py  pipeline.py  places.py  run_pipeline.py  schema.py  schemas.py
cafe_data_collection/templates/: cafe_details.txt  cafe_search.txt  rich_text.txt
cafe_data_collection/utils/: caching.py  logging.py
examples/: city_mappings.json  input.csv
input/: city_mappings copy.json  city_mappings.json  input.csv
tests/: __init__.py  test_basic.py
